--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ensifera</groupId>
   <artifactId>CraftIRC</artifactId>
   <packaging>jar</packaging>
-  <version>2.14-SNAPSHOT</version>
+  <version>2.16-Tul</version>
   <name>CraftIRC</name>
   <url>http://www.github.com/animosity/CraftIRC</url>
   <properties>
@@ -33,13 +33,13 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.1-R5-SNAPSHOT</version>
+      <version>1.2.3-R0.1</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>Vault</artifactId>
-      <version>1.2.9-SNAPSHOT</version>
+      <version>1.2.12-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
