--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
   </scm>
   <repositories>
     <repository>
+      <id>vault-repo</id>
+      <url>http://ci.herocraftonline.com/plugin/repository/everything/</url>
+    </repository>
+    <repository>
       <id>bukkit-repo</id>
       <url>http://repo.bukkit.org/content/groups/public</url>
     </repository>
@@ -33,13 +37,13 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.2.3-R0.1</version>
+      <version>1.4.7-R0.1</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>Vault</artifactId>
-      <version>1.2.12-SNAPSHOT</version>
+      <version>1.2.18-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
