--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ensifera</groupId>
   <artifactId>CraftIRC</artifactId>
   <packaging>jar</packaging>
-  <version>2.17</version>
+  <version>2.17-1.4.7-ec</version>
   <name>CraftIRC</name>
   <url>http://www.github.com/animosity/CraftIRC</url>
   <properties>
