--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.4.7-R0.1</version>
+      <version>1.5.1-R0.1-hydrox-tulon-1</version>
       <type>jar</type>
     </dependency>
     <dependency>
