--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ensifera</groupId>
   <artifactId>CraftIRC</artifactId>
   <packaging>jar</packaging>
-  <version>2.17-1.4.7-ec</version>
+  <version>2.17-1.6.2-dev</version>
   <name>CraftIRC</name>
   <url>http://www.github.com/animosity/CraftIRC</url>
   <properties>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.5.2-R0.2-SNAPSHOT</version>
+      <version>1.6.2-R0.1-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
     <dependency>
