--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>Vault</artifactId>
-      <version>1.2.18-SNAPSHOT</version>
+      <version>1.2.27</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
