--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
-      <artifactId>craftbukkit</artifactId>
+      <artifactId>bukkit</artifactId>
       <version>1.6.4-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
